# brels-midi-editor

./: .cproject  .project  CMakeLists.txt  brlsmidi.c  brlsmidi.h  inputbox.c  inputbox.h  mididec.c  mididec.h  midiedit.c  resources.rc
.github/workflows/: build.yml
documentation/: brels_filtered_event.html  brels_midi_event.html  brels_midi_header.html  brels_track_header.html  btldw.html  btlw.html  index.html  list.html  midicleanevents.html  midiclose.html  midicreate.html  midiencode.html  midieventget.html  midieventset.html  midifiltertrackevents.html  midifreebuffer.html  midiget.html  midigettrackevents.html  midiinserttrack.html  midiinserttrackevents.html  midinext.html  midiopen.html  midipause.html  midiplay.html  midiquery.html  midiremovetrack.html  midiremovetrackevents.html  midireset.html  midiresume.html  midiset.html  midisilence.html  midistop.html  midisuspend.html  miditrackget.html  miditrackset.html  qword.html  test1.mid  test2.mid
misc/: gcc_compile_params.txt  release_eclipse.bat  resources_eclipse.bat
resources/: buttons.txt  controllers.txt  help.html  instruments.txt  strings.txt  tips.txt  version_history.txt
